themes/custom/mat/sass/components/_header.scss
// ========================================
//
// @file _header.scss
// Header element on the page
//
// ========================================

#header {
  position: relative;
}

.region-topbar {
  @include font-size(1.4);
  color: $white;
  @include gradient-blue();

  @media (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
    @include font-size(1.2);
  }
  
  > .block {
    display: flex;
    align-items: center;
    justify-content: space-between;
    @extend .container;
    height: 6rem;

    @media (max-width: 991px) {
      padding-left: ($grid-gutter-width / 2);
      padding-right: ($grid-gutter-width / 2);
    }

    p {
      margin: 0;
    }

    .field--name-body {
      display: none;
      padding: 5px 0 5px 3.8rem;
      position: relative;

      @media (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
        padding-left: 3.5vw;
      }

      &:before {
        content: '';
        display: inline-block;
        width: 2rem;
        height: 2rem;
        background-size: 2rem auto;
        position: absolute;
        top: 6px;
        left: 0;
        @include icons('i-exclamation');
      }

      @media (min-width: $screen-sm-min) {
        display: block;
      }

      a {
        color: $white;
        opacity: .5;
      }
    }

    .topbar_links--group {
      display: flex;

      @media (max-width: $screen-xs-max) {
        justify-content: space-between;
        width: 100%;
      }

      @media (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
        margin-right: 3vw;
      }

      @media (min-width: $screen-sm-min) {
        margin-right: 2.5rem;
      }
    }

    .field--type-link {
      @media (min-width: $screen-sm-min) {
        margin-right: 1.5rem;
      }

      @media (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
        margin-right: 1.1vw;
      }

      a {
        @include btn-secondary();
        padding-right: 1.3rem;
        padding-left: 1.3rem;
        font-weight: 700;
        background-position: 1.2rem 1rem;
        background-size: 14px auto;

        @media (min-width: $screen-sm-min) {
          padding-left: 3.8rem;
          padding-right: 2.2rem;
        }

        @media (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
          padding-left: 4vw;
          padding-right: 1.8vw;
          @include font-size(1.2);
          background-position: 1rem .9rem;
        }
      }
    }

    .field--name-field-link-foundation a {
      @media (min-width: $screen-sm-min) {
        @include icons('i-together');
      }
    }

    .field--name-field-link-donation a {
      @media (min-width: $screen-sm-min) {
        @include icons('i-give-life');
      }
    }

    .i-search-plain {
      @media (min-width: $screen-sm-min) {
        @include icons('i-search-plain');
        background-size: auto auto;
      }
    }

    #topbar--search-open {
      display: none;
      
      @media (min-width: $screen-sm-min) {
        display: block;
        position: absolute;
        right: $grid-gutter-width;
        font-size: 1.6em;
        cursor: pointer;
        width: 2.5rem;
        height: 2.5rem;
      }

      @media (max-width: 991px) {
        right: ($grid-gutter-width / 2);
      }
    }
  }
}

.region-header {
  position: relative;
  z-index: 2;
  
  @media (min-width: $screen-sm-min) {
    padding-top: 3.5rem;
    height: $header-height;
  }

  @media (max-width: $screen-sm-max) {
    padding-top: 2rem;
    height: $header-height-mobile;
  }

  .container {
    display: flex;
    justify-content: space-between;
  }

  // Logotype
  .block.branding {
    a {
      display: inline-block;
      background-image: url('/themes/custom/mat/logo.svg');
      background-repeat: no-repeat;

      @media (min-width: $screen-sm-min) {
        width: 162px;
        height: 60px;
      }

      @media (max-width: $screen-sm-max) {
        width: 105px;
        height: 40px;
        background-size: 105px auto;
      }
    }
  }

  #block-header-search-block,
  #topbar--search-close {
    display: none;
  }

  // Search block overlay is opened
  #block-header-search-block.search-block--opened {
    @media (min-width: $screen-sm-min) {
      display: flex;
      flex-direction: column;
      justify-content: center;
      align-items: center;
      position: fixed;
      top: 0;
      left: 0;
      width: 100%;
      height: 100%;
      z-index: $z-index-search-overlay;
      @include gradient-blue();
      text-align: center;

      form {
        .form-item {
          display: flex;
          flex-direction: column;
          padding: 0 $grid-gutter-width;
          margin-bottom: 5rem;
        }

        label {
          @include font-size(2.4);
          line-height: 1.3;
          font-weight: 500;
          letter-spacing: .13em;
          text-transform: uppercase;
          color: $white;
        }

        input.form-text {
          max-width: 90rem;
          padding: 0.5rem;
          margin-top: 3.2rem;
          @include font-size(8.5);
          line-height: 1;
          text-align: center;
          color: $white;
          @include placeholder($blue-dark); // should be 50% from $blue-dark
          border: none;
          border-bottom: 2px solid $white;
          background-color: transparent;
        }

        .form-actions {
          input {
            padding: 1rem 2.6rem 1rem 5rem;
            @include font-size(1.6);
            font-weight: 500;
            text-transform: none;
            border-radius: 30px;
            @include icons('i-search-plain');
            background-size: 1.5rem auto;
            background-position: 2.6rem center;
          }
        }
      }

      #topbar--search-close {
        display: block;
        width: 100%;
        position: absolute;
        top: 2rem;

        > div {
          max-width: 122rem;
          margin: 0 auto;
          padding: 0 $grid-gutter-width;
          @include font-size(1.6); 
          font-weight: 500;
          letter-spacing: .17em;
          text-transform: uppercase;
          text-align: right;
          color: $white;
        }

        .i-close {
          display: inline-block;
          padding-right: 3.5rem;
          height: 2.5rem;
          @include icons('i-close');
          background-size: auto auto;
          background-position: center right;
          cursor: pointer;
        }
      }
    }
  }
}

// Transparent navigation
body.page-node-type-landing-page:not(.mobile-menu--opened) {
  .region-header {
     // Logotype
    .block.branding {
      a {
        display: inline-block;
        background-image: url('/themes/custom/mat/logo-inverse.svg');
      }
    }
  }
}

// For logged in users
body.adminimal-admin-toolbar {
  #block-header-search-block.search-block--opened {
    #topbar--search-close {
      top: 9.5rem;
    }
  }
}

// Main menu navigation is opened on mobile
body.mobile-menu--opened {
  @media (max-width: $screen-xs-max) { 
    #block-header-search-block {
      display: block;
      position: fixed;
      bottom: 0;
      width: 100%;
      height: 11rem;
      padding: 3rem $grid-gutter-width 0 $grid-gutter-width;
      background-color: #F1F1F1;
      box-shadow: inset 0 7px 10px -7px rgba(0, 0, 0, 0.3);
      z-index: $z-index-mobile-menu;

      form {
        position: relative;

        .form-item {
          margin-bottom: 0;
        }

        label {
          display: none;
        }

        input.form-text {
          width: 100%;
          padding: 1rem 4rem 1rem 0;
          @include font-size(2);
          @include placeholder(#9B9B9B);
          border: none;
          background-color: transparent;
        }

        .form-actions {
          position: absolute;
          top: 0;
          right: 0;

          &:before {
            content: '';
            display: block;
            position: absolute;
            right: -0.5rem;
            cursor: pointer;
            width: 4rem;
            height: 4rem;
            @include icons('i-search-plain-dark');
            background-size: auto auto;
            background-position: center center;
          }

          input {
            width: 4rem;
            height: 4rem;
            opacity: 0 !important;
          }
        }
      }
    }
  }
}

